# check_requirements

./: MANIFEST.in  pyproject.toml  req.txt
src/check_requirements/: __main__.py  _check.py  check.py
src/check_requirements/report/: console.py  html.py  json.py
src/check_requirements_engine/: __main__.py  _check.py  models.py
src/check_requirements_engine/report/: console.py  html.py  json.py
src/check_requirements_engine/report/templates/: report_template.html
