[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check_requirments"
version = "0.0.1"
description = "Check if you have packages installed in your project"
readme = "README.md"
authors = [{ name = "Maciej Parol", email = "parol.m@o2.pl" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache License 2.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["requirments", "audit",]
dependencies = [
    "click >= 8.1.3, <8.2",
    "Jinja2==3.1.2",
    "requests==2.28.1",
    "requirements-parser==0.5.0",
    "python_version < 3.11",
]
requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

    [project.scripts]
    check_requirments = "check_requirements_engine.__main__:check_requirements"

    [project.urls]
    repository    = "https://github.com/maciejparol/check_requirements"
    documentation = "https://github.com/maciejparol/check_requirements"


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/check_requirements_engine/__init__.py" = ["{version}"]

[tool.isort]
profile                   = "black"

[tool.mypy]
strict = true

